--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       coverpage: true,
       name: '易经六十四卦',
       repo: '',
-      coverpage: false,
+      coverpage: true,
       loadSidebar: true
     }
   </script>
