--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       },
       coverpage: true,
       name: '易经六十四卦',
-      repo: '',
+      repo: 'https://github.com/jhshushi/yijing',
       coverpage: true,
       loadSidebar: true
     }
